New webpart added

--- a/SendReceiveWebparts/.yo-rc.json
+++ b/SendReceiveWebparts/.yo-rc.json
@@ -6,6 +6,7 @@
     "environment": "spo",
     "packageManager": "npm",
     "componentType": "webpart",
-    "isCreatingSolution": true
+    "isCreatingSolution": false,
+    "plusBeta": true
   }
 }
